p4i integration Integrate 201761 from 4.1 to main: Doc:   Fix typo RevBy: Trust me
[git-p4: depot-paths = "//depot/qt/main/": change = 201762]

--- a/examples/widgets/README
+++ b/examples/widgets/README
@@ -1,5 +1,5 @@
 Qt comes with a large range of standard widgets that users of modern
-application have come to expect.
+applications have come to expect.
 
 You can also develop your own custom widgets and controls, and use them
 alongside standard widgets.
