--- a/translations/README
+++ b/translations/README
@@ -1,4 +1,4 @@
-The French and German translation files are supported by Trolltech.
-All other translations are contributed by third parties. These are
-provided without guarantees and may disappear from future Qt
-releases.
+The French, German, and Simplified Chinese translation files are
+supported by Trolltech. All other translations are contributed by
+third parties. These are provided without guarantees and may
+disappear from future Qt releases.
