p4i integration Integrate 203745 from 4.1 to main: Fixes:    Various doc fixes. Task:     Several tasks. Details:  Went through my tasks today ;)
[git-p4: depot-paths = "//depot/qt/main/": change = 203746]

--- a/util/qdoc3/TODO.txt
+++ b/util/qdoc3/TODO.txt
@@ -1,3 +1,4 @@
+    * \variable array
     * Added support for parameterless macros (e.g. \macro Q_OBJECT).
     * Made qdoc stricter regarding the data types (e.g. can't use \enum to document a typedef).
     * Parse QT_MODULE() macro and generate proper warnings for the various editions.
