Fixes:    spaces in file names Task:     TaskMaster Ettrich AutoTest: there is an existing testcase Details:  This is a pretty major change, but net result is nothing different for non-spaced file names. When a file name occurs in some well known places (INCLUDEPATH's, TARGET's, SOURCES', HEADERS', RESOURCES', etc) then we will quote them properly for the backend. I've tested on vc7, vc7 converting vc6 files, unix make, nmake, bsdmake, and xcode. Most seems well off and the old quoted test passes. If any troubles come up please let me know.
[git-p4: depot-paths = "//depot/qt/main/": change = 210985]

--- a/qmake/CHANGES
+++ b/qmake/CHANGES
@@ -1,4 +1,8 @@
-1.08a -
+2.10a -
+
+   support for spaces in filenames.
+
+2.00a -
 
    Automatic feature loading (from CONFIG) has been added, this allows qmake to be
    written using qmake language.
@@ -23,7 +27,7 @@
    warning() can be used in place of message() now.
 
    improved support for subdirs with .pro's listed
-   support for QCONFIG added to add functionality from Qt
+   support for QT added to add functionality from Qt
 
 1.07a -
 
