p4i integration Integrate 211920 from 4.1 to main: Fixes:    Misc doc issues. Task:     102751 Details:  + other doc stuff.
[git-p4: depot-paths = "//depot/qt/main/": change = 211921]

--- a/util/qdoc3/TODO.txt
+++ b/util/qdoc3/TODO.txt
@@ -1,3 +1,6 @@
+    * Fix QMenu::addAction(QAction *) overload, "using" etc.
+    * fix space between two tables using <p></p>
+    * qpixmap-qt3.html; remove 8 public functions inherited from QPaintDevice
     * \variable array
     * Added support for parameterless macros (e.g. \macro Q_OBJECT).
     * Made qdoc stricter regarding the data types (e.g. can't use \enum to document a typedef).
