Fixes:    1. Disable .qm file compression in lrelease and Qt Linguist by default. 	     Pass -compress to lrelease to obtain the old default behavior. 	  2. Make verbose the default behavior for lupdate and lrelease. 	     Pass -silent to obtain the old default behavior. 	  3. Fixed error message in .pro file parser. (Don't mention this in the change file.) Task:     68087 Reviewer: Jan-Arve Details:  The compression causes some strange things to happen in some cases. See the task.
[git-p4: depot-paths = "//depot/qt/main/": change = 212488]

--- a/tools/linguist/lrelease/lrelease.1
+++ b/tools/linguist/lrelease/lrelease.1
@@ -39,14 +39,14 @@ extremely fast lookups for translations and that is used by Qt.
 .I "-help"
 Display the usage and exit.
 .TP
-.I "-nocompress"
-Do not compress the .qm files.
+.I "-compress"
+Compress the .qm files.
 .TP
 .I "-nounfinished"
 Do not include unfinished translations.
 .TP
-.I "-verbose"
-Explain what is being done.
+.I "-silent"
+Don't explain what is being done.
 .TP
 .I "-version"
 Display the version of
