--- a/tools/linguist/lupdate/lupdate.1
+++ b/tools/linguist/lupdate/lupdate.1
@@ -46,8 +46,8 @@ Display the usage and exit.
 .I "-noobsolete"
 Drop all obsolete strings.
 .TP
-.I "-verbose"
-Explain what is being done.
+.I "-silent"
+Don't explain what is being done.
 .TP
 .I "-version"
 Display the version of
