manual integration (1st pass) Integrate 215505 from 4.1-optimized to main: Integrate 215499 from 4.1 to 4.1-optimized: Doc:      Proper copyright Details:  Shouldn't we use $THISYEAR instead of 2006 in *.pr* files?
[git-p4: depot-paths = "//depot/qt/main/": change = 215521]

--- a/tools/linguist/lrelease/lrelease.1
+++ b/tools/linguist/lrelease/lrelease.1
@@ -1,6 +1,6 @@
 .TH lrelease 1 "18 October 2001" "Trolltech AS" \" -*- nroff -*-
 .\"
-.\" Copyright 2001 Trolltech AS.  All rights reserved.
+.\" Copyright (C) 2001-$THISYEAR$ Trolltech AS. All rights reserved.
 .\"
 .\" This file may be distributed and/or modified under the terms of the
 .\" GNU General Public License version 2 as published by the Free Software
